--- a/BackEnd/TutorFinder/src/main/resources/application.properties
+++ b/BackEnd/TutorFinder/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/noteout_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/dadadidi
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
